syntax = "proto3";

message DataPoint {
    string metric_name = 1;
    uint64 timestamp = 2;
    float value = 3;
}

message QueryRequest {
    string metric_name = 1;
    uint64 start_timestamp = 2;
    uint64 end_timestamp = 3;
}

message QueryResponse {
    string metric_name = 1;

    message Point {
        uint64 timestamp = 1;
        float value = 2;
    }

    message Line {
        string name = 1;
        repeated Point points = 2;
    }

    repeated Line lines = 2;
}

// 'temp'
// 'tvoc'
// 'humidity'
// 'pressure'

// Measuring temperature, TVOC, 